src/main/resources/static/css/scss/_components.scss
.Viewer-controls-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 3vh;
  right: 3vw;
  z-index: 200;

  .Viewer-button {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 1rem;
    margin: 1rem;
    border: none;
    border-radius: 100%;
    width: 4rem;
    height: 4rem;
    background: rgb(0, 0, 0);
    background: radial-gradient(circle, rgba(0, 0, 0, .4) 0%, rgba(0, 255, 255, 0) 75%);

    img {
      width: 32px;
    }
  }
}

.Card-metadata {
  margin: .25rem 0 .15rem .25rem;

  .Card-title {
    margin-bottom: .25rem;
    font-weight: bold;
    max-width: 280px;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .Card-tags {
    display: flex;
    align-items: center;
    font-size: small;
    color: #888;
    overflow: hidden;
    text-overflow: ellipsis;

    .Card-icon-container {
      display: flex;
      align-items: center;
      margin-right: .5rem;

      img {
        width: 16px;
        margin: 0 .25rem;
        opacity: .65;
      }
    }

    .Card-tag-list {
      display: flex;
      align-items: center;
      overflow: hidden;
      max-height: 35px;

      .Card-tag {
        border: 1px solid #888;
        border-radius: 5px;
        padding: 3px 5px;
        margin: 5px;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        max-width: 100px;
      }
    }
  }
}

.Viewer-button.Favorite-button {
  .Favorite {
    display: none;
  }

  &.favorite {
    .Favorite {
      display: inline-block;
    }

    .Not-favorite {
      display: none;
    }
  }

  &.loading {
    img {
      display: none;
    }

    .Loading-spinner {
      display: inline-block;
    }
  }
}

.Loading-spinner {
  display: none;
  position: relative;
  width: 32px;
  height: 32px;
  transform: translate(-40%, -40%);
}

.Loading-spinner div {
  position: absolute;
  border: 4px solid #fff;
  opacity: 1;
  border-radius: 50%;
  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
}

.Loading-spinner div:nth-child(2) {
  animation-delay: -0.5s;
}

$spinnerSize: 24px;
@keyframes lds-ripple {
  0% {
    top: $spinnerSize;
    left: $spinnerSize;
    width: 0;
    height: 0;
    opacity: 0;
  }
  4.9% {
    top: $spinnerSize;
    left: $spinnerSize;
    width: 0;
    height: 0;
    opacity: 0;
  }
  5% {
    top: $spinnerSize;
    left: $spinnerSize;
    width: 0;
    height: 0;
    opacity: 1;
  }
  100% {
    top: 0;
    left: 0;
    width: calc($spinnerSize * 2);
    height: calc($spinnerSize * 2);
    opacity: 0;
  }
}

